<?xml version="1.0"?>
<package format="3">
  <name>irb120_robotiq85_gazebo</name>
  <version>0.0.0</version>
  <description>The irb120_robotiq85_gazebo package</description>

  <maintainer email="diego.martin.martin@gmail.com">Diego Martín</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>